feat(common): Add theme variants!
Add variants to the theme, allowing for light and dark themes.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Offside&family=Playwrite+RO:wght@100..400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Offside&family=Playwrite+RO:wght@100..400&display=swap"
+          rel="stylesheet">
     <title>Noovies Entertainment</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+    <script>
+        (function () {
+            const isDarkSystem = window.matchMedia('(prefers-color-scheme: dark)').matches;
+
+            const isDark =
+                localStorage.theme === 'dark' ||
+                localStorage.theme === 'system' && isDarkSystem ||
+                !('themeVariant' in localStorage) && isDarkSystem;
+
+            document.documentElement.classList.toggle('dark', isDark);
+        })()
+    </script>
+</head>
+<body>
+<div id="root"></div>
+<script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
